Fixed some graphical issues. Now the results are opening the first tab as default and is less fluid to avoid overlaps between left and right sections

--- a/css/wpsclient.css
+++ b/css/wpsclient.css
@@ -2,13 +2,13 @@
     width: 100%;
     height: 100%;
     width: auto;
-    overflow: auto;
+    overflow: hidden;
 }
 .bb_left_exp {
-float: left; height: 100%; width: 29%;
+float: left; height: 100%; width: 550px;
 }
 .bb_right_exp {
-float: left; width: 67%; height: 100%;
+float: left; min-width: 950px; max-width: 67%; height: 100%;
 }
 
 .bb_left_exp_vert {
